[package]
name = "yep"
version = "0.1.0"
edition = "2021"
license = "MIT license"
authors = ["Jan Katins <jasc@gmx.net>"]
description = "yet another package manager for local cli commands"
documentation = "https://docs.rs/yep"
repository = "https://github.com/jankatins/yep"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
keywords = [
    "yep",
    "cli",
    "package manager"
]
categories = ["command-line-utilities"]
exclude = [
    # (optional) list any files we don't want to publish to crates.io
    # for example, assume the below is a folder which contains large `mp4` files:
    #   "examples/assets"
]


[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

[dev-dependencies]
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"

### FEATURES #################################################################

[features]


